Fix grid layout issue

--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ header {
   background: rgb(252, 239, 239, 0.4);
 }
 
+#step-stair-chart {
+  width: 500px;
+}
 
 /* ----------------------------------------------
  * Generated by Animista on 2020-2-3 19:38:58
@@ -144,6 +147,7 @@ header {
  * animation scale-in-hor-center
  * ----------------------------------------
  */
+
  @-webkit-keyframes scale-in-hor-center {
   0% {
     -webkit-transform: scaleX(0);
